--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,8 @@ img{
   border-width: 3px;
   border-style: solid;
   height: 180px;
-  width: 180px;
+  width: 200px;
+  transform: rotate(270deg);
 }
 
 h1, h6{
