--- a/css/styles.css
+++ b/css/styles.css
@@ -24,25 +24,27 @@ h1, h6{
 
 h2{
   font-weight: 700;
+  color: white;
 }
 
 h3{
   font-weight: 700;
   font-size: 25px;
+  color: white;
 }
 
 h4{
   font-weight: 700;
-  color: #42A8C0;
+  color: #160754;
 }
 
 h5{
   font-weight: 700;
-  color: black;
+  color: white;
 }
 
 a{
-  color: #2d7788;
+  color: white;
   -webkit-transition: all 0.4s ease-in-out;
   -moz-transition: all 0.4s ease-in-out;
   -ms-transition: all 0.4s ease-in-out;
@@ -51,7 +53,7 @@ a{
 
 a:hover {
   text-decoration: underline;
-  color: #1a454f;
+  color: black;
 }
 
 a:focus {
@@ -82,7 +84,8 @@ p{
 }
 
 #col1 {
-  background: #42A8C0;
+  /*background: #42A8C0;*/
+  background-color: #032f57;
   border-radius: 20px;
   padding-top: 15px;
   /*
@@ -201,7 +204,8 @@ p{
 }
 
 #col2 {
-  background: #fff;
+  /*background: #fff;*/
+  background-color: #8c730f;
   padding: 60px;
   border-radius: 20px;
 }
